--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,14 @@
     "type": "library",
     "description": "Laravel 9 soft deletes optimization for high load queries",
     "keywords": [
-        "LaravelSoftDeletesBoolen",
+        "LaravelSoftDeletesBoolean",
         "Laravel",
         "Laravel 9",
-        "SoftDeletes"
+        "SoftDeletes",
+        "Soft deletes",
+        "laravel boolean soft deletes"
     ],
-    "version": "1.0.1",
+    "version": "1.0.2",
     "homepage": "https://github.com/FlexIDK/laravel-softdeletes-boolean",
     "license": "MIT",
     "require": {
